// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluggableBarChart Sort config should provide areaSort+measureSort by first measure as default sort for 2M + 2 VB 1`] = `
Array [
  Object {
    "attributeSortItem": Object {
      "aggregation": "sum",
      "attributeIdentifier": "a1",
      "direction": "desc",
    },
  },
  Object {
    "measureSortItem": Object {
      "direction": "desc",
      "locators": Array [
        Object {
          "measureLocatorItem": Object {
            "measureIdentifier": "m1",
          },
        },
      ],
    },
  },
]
`;

exports[`PluggableBarChart Sort config should provide attribute area sort and measureSort as default sort for 1M + 2 VB 1`] = `
Array [
  Object {
    "attributeSortItem": Object {
      "aggregation": "sum",
      "attributeIdentifier": "a1",
      "direction": "desc",
    },
  },
  Object {
    "measureSortItem": Object {
      "direction": "desc",
      "locators": Array [
        Object {
          "measureLocatorItem": Object {
            "measureIdentifier": "m1",
          },
        },
      ],
    },
  },
]
`;

exports[`PluggableBarChart Sort config should provide attribute area sort as default sort for 2 stacked M + 1 VB 1`] = `
Array [
  Object {
    "attributeSortItem": Object {
      "aggregation": "sum",
      "attributeIdentifier": "a1",
      "direction": "desc",
    },
  },
]
`;

exports[`PluggableBarChart Sort config should provide measureSort as default sort for 1M + 1 VB 1`] = `
Array [
  Object {
    "measureSortItem": Object {
      "direction": "desc",
      "locators": Array [
        Object {
          "measureLocatorItem": Object {
            "measureIdentifier": "m1",
          },
        },
      ],
    },
  },
]
`;

exports[`PluggableBarChart Sort config should provide measureSort by first measure as default sort for 2M + 1 VB 1`] = `
Array [
  Object {
    "measureSortItem": Object {
      "direction": "desc",
      "locators": Array [
        Object {
          "measureLocatorItem": Object {
            "measureIdentifier": "m1",
          },
        },
      ],
    },
  },
]
`;

exports[`PluggableBarChart Sort config should provide two areaSorts as default sort for 2 stacked M + 2 VB 1`] = `
Array [
  Object {
    "attributeSortItem": Object {
      "aggregation": "sum",
      "attributeIdentifier": "a1",
      "direction": "desc",
    },
  },
  Object {
    "attributeSortItem": Object {
      "aggregation": "sum",
      "attributeIdentifier": "a2",
      "direction": "desc",
    },
  },
]
`;

exports[`PluggableBarChart Sort config should provide two attribute area sorts as default sort for 1M + 2 VB + 1SB 1`] = `
Array [
  Object {
    "attributeSortItem": Object {
      "aggregation": "sum",
      "attributeIdentifier": "a1",
      "direction": "desc",
    },
  },
  Object {
    "attributeSortItem": Object {
      "aggregation": "sum",
      "attributeIdentifier": "a2",
      "direction": "desc",
    },
  },
]
`;

exports[`PluggableBarChart Sort config should return valid available sorts for 1M + 1 VB + 1SB 1`] = `
Array [
  Object {
    "attributeSort": Object {
      "areaSortEnabled": true,
      "normalSortEnabled": true,
    },
    "itemId": Object {
      "localIdentifier": "a1",
    },
  },
]
`;

exports[`PluggableBarChart Sort config should return valid available sorts for 1M + 1 VB 1`] = `
Array [
  Object {
    "attributeSort": Object {
      "areaSortEnabled": false,
      "normalSortEnabled": true,
    },
    "itemId": Object {
      "localIdentifier": "a1",
    },
    "metricSorts": Array [
      Object {
        "locators": Array [
          Object {
            "measureLocatorItem": Object {
              "measureIdentifier": "m1",
            },
          },
        ],
        "type": "measureSort",
      },
    ],
  },
]
`;

exports[`PluggableBarChart Sort config should return valid available sorts for 1M + 2 VB + 1SB 1`] = `
Array [
  Object {
    "attributeSort": Object {
      "areaSortEnabled": true,
      "normalSortEnabled": true,
    },
    "itemId": Object {
      "localIdentifier": "a1",
    },
  },
  Object {
    "attributeSort": Object {
      "areaSortEnabled": true,
      "normalSortEnabled": true,
    },
    "itemId": Object {
      "localIdentifier": "a2",
    },
  },
]
`;

exports[`PluggableBarChart Sort config should return valid available sorts for 2 stacked M + 1 VB 1`] = `
Array [
  Object {
    "attributeSort": Object {
      "areaSortEnabled": true,
      "normalSortEnabled": true,
    },
    "itemId": Object {
      "localIdentifier": "a1",
    },
    "metricSorts": Array [
      Object {
        "locators": Array [
          Object {
            "measureLocatorItem": Object {
              "measureIdentifier": "m1",
            },
          },
        ],
        "type": "measureSort",
      },
      Object {
        "locators": Array [
          Object {
            "measureLocatorItem": Object {
              "measureIdentifier": "m2",
            },
          },
        ],
        "type": "measureSort",
      },
    ],
  },
]
`;

exports[`PluggableBarChart Sort config should return valid available sorts for 2 stacked M + 2 VB 1`] = `
Array [
  Object {
    "attributeSort": Object {
      "areaSortEnabled": true,
      "normalSortEnabled": true,
    },
    "itemId": Object {
      "localIdentifier": "a1",
    },
  },
  Object {
    "attributeSort": Object {
      "areaSortEnabled": true,
      "normalSortEnabled": true,
    },
    "itemId": Object {
      "localIdentifier": "a2",
    },
    "metricSorts": Array [
      Object {
        "locators": Array [
          Object {
            "measureLocatorItem": Object {
              "measureIdentifier": "m1",
            },
          },
        ],
        "type": "measureSort",
      },
      Object {
        "locators": Array [
          Object {
            "measureLocatorItem": Object {
              "measureIdentifier": "m2",
            },
          },
        ],
        "type": "measureSort",
      },
    ],
  },
]
`;

exports[`PluggableBarChart Sort config should return valid available sorts for 2M + 1 VB 1`] = `
Array [
  Object {
    "attributeSort": Object {
      "areaSortEnabled": true,
      "normalSortEnabled": true,
    },
    "itemId": Object {
      "localIdentifier": "a1",
    },
    "metricSorts": Array [
      Object {
        "locators": Array [
          Object {
            "measureLocatorItem": Object {
              "measureIdentifier": "m1",
            },
          },
        ],
        "type": "measureSort",
      },
      Object {
        "locators": Array [
          Object {
            "measureLocatorItem": Object {
              "measureIdentifier": "m2",
            },
          },
        ],
        "type": "measureSort",
      },
    ],
  },
]
`;

exports[`PluggableBarChart Sort config should return valid available sorts for 2M + 2 VB 1`] = `
Array [
  Object {
    "attributeSort": Object {
      "areaSortEnabled": true,
      "normalSortEnabled": true,
    },
    "itemId": Object {
      "localIdentifier": "a1",
    },
  },
  Object {
    "attributeSort": Object {
      "areaSortEnabled": true,
      "normalSortEnabled": true,
    },
    "itemId": Object {
      "localIdentifier": "a2",
    },
    "metricSorts": Array [
      Object {
        "locators": Array [
          Object {
            "measureLocatorItem": Object {
              "measureIdentifier": "m1",
            },
          },
        ],
        "type": "measureSort",
      },
      Object {
        "locators": Array [
          Object {
            "measureLocatorItem": Object {
              "measureIdentifier": "m2",
            },
          },
        ],
        "type": "measureSort",
      },
    ],
  },
]
`;
